[tool.poetry]
name = "gitlab-unauth-parser"
version = "0.1.0"
description = ""
authors = ["Louis Dion-Marcil <maden.ldm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.14"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.36.2"}
yapf = "^0.30.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
